--- a/TaskClient/TaskClient.csproj
+++ b/TaskClient/TaskClient.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{55C02263-8710-4E4C-A2B1-8B2C8C94A9EA}</ProjectGuid>
+    <ProjectGuid>{7FC8C0AF-5312-4D4C-AB9C-4694B29953D7}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TaskServer</RootNamespace>
-    <AssemblyName>TaskServer</AssemblyName>
+    <RootNamespace>TaskClient</RootNamespace>
+    <AssemblyName>TaskClient</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,14 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MessagesLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\MessagesLib\MessagesLib\bin\Debug\MessagesLib.dll</HintPath>
-    </Reference>
-    <Reference Include="MySql.Data, Version=6.1.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>.\MySql.Data.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -49,14 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Config.cs" />
-    <Compile Include="DBConnector.cs" />
-    <Compile Include="EchoTask.cs" />
-    <Compile Include="IServerTask.cs" />
+    <Compile Include="MessageCommunicator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Worker.cs" />
-    <Compile Include="Workerpool.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
